--- a/ConsoleFramework/ConsoleFramework.csproj
+++ b/ConsoleFramework/ConsoleFramework.csproj
@@ -1,142 +1,26 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProductVersion>8.0.30703</ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{2A59C284-2995-4F37-8D65-411C25C85493}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ConsoleFramework</RootNamespace>
+    <TargetFramework>netstandard1.0</TargetFramework>
+    <DefineConstants>$(DefineConstants);DOTNETCORE</DefineConstants>
+    <DebugType>portable</DebugType>
     <AssemblyName>ConsoleFramework</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <TargetFrameworkProfile>
-    </TargetFrameworkProfile>
-    <FileAlignment>512</FileAlignment>
+    <PackageId>ConsoleFramework</PackageId>
+    <PackageTargetFallback>$(PackageTargetFallback);dnxcore50</PackageTargetFallback>
+    <RuntimeFrameworkVersion>1.0.4</RuntimeFrameworkVersion>
+    <GenerateAssemblyTitleAttribute>false</GenerateAssemblyTitleAttribute>
+    <GenerateAssemblyDescriptionAttribute>false</GenerateAssemblyDescriptionAttribute>
+    <GenerateAssemblyConfigurationAttribute>false</GenerateAssemblyConfigurationAttribute>
+    <GenerateAssemblyCompanyAttribute>false</GenerateAssemblyCompanyAttribute>
+    <GenerateAssemblyProductAttribute>false</GenerateAssemblyProductAttribute>
+    <GenerateAssemblyCopyrightAttribute>false</GenerateAssemblyCopyrightAttribute>
+    <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
+    <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>TRACE;DEBUG;WIN32</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|x86' ">
-    <PlatformTarget>x86</PlatformTarget>
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'DebugMono|x86'">
-    <DebugSymbols>true</DebugSymbols>
-    <OutputPath>bin\x86\DebugMono\</OutputPath>
-    <DefineConstants>TRACE;DEBUG</DefineConstants>
-    <DebugType>full</DebugType>
-    <PlatformTarget>x86</PlatformTarget>
-    <CodeAnalysisLogFile>bin\Debug\ConsoleFramework.dll.CodeAnalysisLog.xml</CodeAnalysisLogFile>
-    <CodeAnalysisUseTypeNameInSuppression>true</CodeAnalysisUseTypeNameInSuppression>
-    <CodeAnalysisModuleSuppressionsFile>GlobalSuppressions.cs</CodeAnalysisModuleSuppressionsFile>
-    <ErrorReport>prompt</ErrorReport>
-    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <CodeAnalysisRuleSetDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\\Rule Sets</CodeAnalysisRuleSetDirectories>
-    <CodeAnalysisIgnoreBuiltInRuleSets>false</CodeAnalysisIgnoreBuiltInRuleSets>
-    <CodeAnalysisRuleDirectories>;C:\Program Files (x86)\Microsoft Visual Studio 10.0\Team Tools\Static Analysis Tools\FxCop\\Rules</CodeAnalysisRuleDirectories>
-    <CodeAnalysisIgnoreBuiltInRules>false</CodeAnalysisIgnoreBuiltInRules>
-    <WarningLevel>4</WarningLevel>
-    <Optimize>false</Optimize>
-  </PropertyGroup>
+
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="Mono.Posix" Condition="'$(Configuration)' == 'DebugMono'" />
+    <ProjectReference Include="..\Binding\Binding.csproj" />
+    <ProjectReference Include="..\Xaml\Xaml.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Controls\ButtonBase.cs" />
-    <Compile Include="Controls\CheckBox.cs" />
-    <Compile Include="Controls\ComboBox.cs" />
-    <Compile Include="Controls\ContextMenu.cs" />
-    <Compile Include="Controls\Grid.cs" />
-    <Compile Include="Controls\GroupBox.cs" />
-    <Compile Include="Controls\ListBox.cs" />
-    <Compile Include="Controls\Menu.cs" />
-    <Compile Include="Controls\MessageBox.cs" />
-    <Compile Include="Controls\ProgressBar.cs" />
-    <Compile Include="Controls\RadioButton.cs" />
-    <Compile Include="Controls\ScrollViewer.cs" />
-    <Compile Include="Controls\TabControl.cs" />
-    <Compile Include="Controls\TextBox.cs" />
-    <Compile Include="Controls\TreeView.cs" />
-    <Compile Include="Controls\UIElementCollection.cs" />
-    <Compile Include="Core\ThicknessConverter.cs" />
-    <Compile Include="Core\VisualTreeHelper.cs" />
-    <Compile Include="Events\ICommand.cs" />
-    <Compile Include="Events\ICommandSource.cs" />
-    <Compile Include="Events\KeyboardFocusChangedEventArgs.cs" />
-    <Compile Include="Events\KeyConverter.cs" />
-    <Compile Include="Events\KeyEventArgs.cs" />
-    <Compile Include="Events\KeyGesture.cs" />
-    <Compile Include="Events\KeyGestureConverter.cs" />
-    <Compile Include="Events\ModifierKeysConverter.cs" />
-    <Compile Include="Events\MouseEventArgs.cs" />
-    <Compile Include="Controls\Window.cs" />
-    <Compile Include="Events\EventManager.cs" />
-    <Compile Include="Events\RelayCommand.cs" />
-    <Compile Include="Events\RoutedEventArgs.cs" />
-    <Compile Include="Events\FocusManager.cs" />
-    <Compile Include="Native\Libc.cs" />
-    <Compile Include="Native\LibTermKey.cs" />
-    <Compile Include="Native\NCurses.cs" />
-    <Compile Include="Core\Colors.cs" />
-    <Compile Include="Core\UnicodeTable.cs" />
-    <Compile Include="Rendering\RenderingBuffer.cs" />
-    <Compile Include="Controls\Button.cs" />
-    <Compile Include="Controls\Control.cs" />
-    <Compile Include="Controls\Panel.cs" />
-    <Compile Include="Controls\TextBlock.cs" />
-    <Compile Include="Controls\WindowsHost.cs" />
-    <Compile Include="Core\Point.cs" />
-    <Compile Include="Core\Rect.cs" />
-    <Compile Include="Core\Size.cs" />
-    <Compile Include="Core\Thickness.cs" />
-    <Compile Include="Core\Vector.cs" />
-    <Compile Include="Rendering\PhysicalCanvas.cs" />
-    <Compile Include="Rendering\Renderer.cs" />
-    <Compile Include="ConsoleApplication.cs" />
-    <Compile Include="Native\Win32.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Events\RoutedEvent.cs" />
-    <Compile Include="Xaml\BindingMarkupExtension.cs" />
-    <Compile Include="Xaml\ConvertMarkupExtension.cs" />
-    <Compile Include="Xaml\NotBooleanConverter.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Binding\Binding.csproj">
-      <Project>{E1CD529B-E3F1-4660-AA4F-1670E0992553}</Project>
-      <Name>Binding</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Xaml\Xaml.csproj">
-      <Project>{C6EDD03A-30BE-4EFE-8EE4-C1CD3212778B}</Project>
-      <Name>Xaml</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
-  <ItemGroup>
-    <None Include="ConsoleFramework.dll.config">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup>
+
 </Project>
