--- a/Binding/Binding.csproj
+++ b/Binding/Binding.csproj
@@ -1,5 +1,4 @@
 <Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
     <TargetFramework>netstandard1.0</TargetFramework>
     <DebugType>portable</DebugType>
@@ -16,5 +15,7 @@
     <GenerateAssemblyVersionAttribute>false</GenerateAssemblyVersionAttribute>
     <GenerateAssemblyFileVersionAttribute>false</GenerateAssemblyFileVersionAttribute>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="AgileObjects.NetStandardPolyfills" Version="0.2.1" />
+  </ItemGroup>
 </Project>
