--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,14 @@
 language: csharp
-solution: ConsoleFramework.sln
+dist: trusty
+mono: none
+dotnet: 2.1.4
+install:
+  - dotnet restore
 script:
-  - xbuild /p:Configuration=DebugMono /p:Platform=x86 ConsoleFramework.sln
+  - dotnet build
+  - dotnet test Tests
+matrix:
+  include:
+    - os: linux
+      dist: trusty
+    - os: osx
