--- a/ConsoleFramework/ConsoleFramework.csproj
+++ b/ConsoleFramework/ConsoleFramework.csproj
@@ -1,6 +1,5 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
     <DefineConstants>$(DefineConstants);DOTNETCORE</DefineConstants>
     <DebugType>portable</DebugType>
     <AssemblyName>ConsoleFramework</AssemblyName>
@@ -19,6 +18,7 @@
     <PackageProjectUrl>https://github.com/elw00d/consoleframework</PackageProjectUrl>
     <PackageIconUrl>http://elw00d.github.io/consoleframework/favicon.png</PackageIconUrl>
     <Authors />
+    <TargetFrameworks>netstandard2.0;netstandard2.1;netcoreapp3.0</TargetFrameworks>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\Binding\Binding.csproj" />
