Added xmlns="" support for better Rider xaml integration. Fixes #65

--- a/ExamplesStandalone/ManyControls/ManyControls.csproj
+++ b/ExamplesStandalone/ManyControls/ManyControls.csproj
@@ -15,6 +15,8 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\ConsoleFramework\ConsoleFramework.csproj" />
-    <EmbeddedResource Include="GridTest.xml" LogicalName="ManyControls.GridTest.xml" />
+    <EmbeddedResource Include="GridTest.xaml">
+      <LogicalName>ManyControls.GridTest.xaml</LogicalName>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
